DEV-347 Fix background issue for dropdown on mobile

--- a/src/styles/modules/mail-composer/_mail-composer.scss
+++ b/src/styles/modules/mail-composer/_mail-composer.scss
@@ -386,6 +386,7 @@ a {
 			top: 43px !important;
 			border-top: none;
 			border-radius: 0 4px 4px;
+            bottom: auto;
 		}
     }
 }
